# Zkanso

./: App.tsx  CRAFT_THEME_UPDATE.md  DESIGN_DOCUMENT.md  DRAG_SPEC.md  IMPLEMENTATION_SUMMARY.md  README.md  TIPTAP_EXTENSIONS.md  demo-data.json  index.html  metadata.json  mock-data.json  package-lock.json  package.json  test-drag-comprehensive.spec.ts  test-drag.spec.ts  types.ts  vite.config.ts  编辑器重构实施清单-完整版.md  飞书与Craft UI-UX设计方案.md
components/: BubbleMenu.tsx  CalloutComponent.tsx  ColorPicker.tsx  ContextMenu.tsx  CustomDialog.tsx  DocCard.tsx  DraggableBlockExtension.tsx  Editor.tsx  FloatingToolbar_crafted.tsx  MermaidDrawer.tsx  MermaidExtension.tsx  Modals.tsx  ModeToolbar_crafted.tsx  ResizableImage.tsx  Sidebar.tsx  SlashCommandMenu.tsx  TableMenu.tsx  TiptapEditor.tsx  Toast.tsx  VideoExtension.tsx
docs/: CRAFT_EDITOR_USAGE.md  CRAFT_EDITOR_USER_GUIDE.md  CRAFT_EDITOR_VISUAL_DETAILS.md  CRAFT_FEATURES_CHECKLIST.md  CRAFT_IMPLEMENTATION_SUMMARY.md  CRAFT_PAGE_PREVIEW.md  EDITOR_REPLACEMENT_SUMMARY.md  HOW_TO_VIEW_DEMO.md  NAVBAR_REDESIGN_SUMMARY.md  REFACTOR_PROGRESS.md  block-design-system.md  blocks-implementation-summary.md  craft-ui-components-design-system.md  floating-toolbar-implementation.md  paragraph-drag-implementation-summary.md  paragraph-editing-specifications.md  paragraph-enhancement-summary.md  paragraph-interaction-implementation.md  slash-command-system.md
server/: CACHE_FEATURE.md  Cargo.toml  README.md  TEST_RESULTS.md  pom.xml  start.sh  test-server.sh
server/src/: main.rs
server/src/main/java/com/kanso/server/: CRDTServer.java
(+89 files in other folders)
